--- a/beta/templates/donationSuccess.html
+++ b/beta/templates/donationSuccess.html
@@ -10,6 +10,6 @@
         the inclusive tradition of the Whiptails community and tear down financial barriers to 
         joining the team. Members of our team will be in touch 
         with more details soon.</p>
-        <img src="/static/team.jpg" alt="Members of Whiptails 2018-2019" id="team-pic"></a>
+        <img src="{{url_for('static',filename='team.jpg')}}" alt="Members of Whiptails 2018-2019" id="team-pic"></a>
     </body>
 {% endblock %}
