--- a/beta/templates/moreinfo.html
+++ b/beta/templates/moreinfo.html
@@ -7,13 +7,15 @@
 
 <body>
     <h1>{{t.type}}</h1>
-    <form method="post" action="{{url_for('updateProfile')}}"> 
+    <form method="post" action="{{url_for('updateProfile')}}" enctype = "multipart/form-data"> 
     <div id="personal">
     <fieldset>
         <legend>Personal Information</legend>
         <table>
             <tr><td><label for="name"> Name:</label></td><td><input type="text" name="name" id="name" value="{{b.name}}"></td></tr>
             <tr><td><label for="nickname"> Nickname:</label></td><td><input type="text" name="nickname" id="nickname" value={{b.nickname}}></td></tr>
+            <tr><td><label for="pic">Pic: <input type="file" name="pic" accept="image/*"></label></td></tr>
+            
             <tr><td><label for="phnum"> Phone number:</label></td><td><input type="text" name="phnum" id="phnum" value={{c.phnum}}></td></tr>
             <tr><td><label for="year"> Class year:</label></td><td><input type="text" name="year" id="year" value={{b.classyear}}></td></tr>
         </table>
