--- a/beta/templates/index.html
+++ b/beta/templates/index.html
@@ -24,6 +24,7 @@
       <li><a href={{ url_for('makeDonation') }}>Donate</a></li>
       <li><a href={{ url_for('giveFeedback') }}>Feedback</a></li>
       <li><a href={{ url_for('getFamily') }}>Family</a></li>
+      <li><a href={{ url_for('searchPerson') }}>Search</a></li>
       <li><a href={{ url_for('adminBoard') }}>Admins</a></li>
     </ul>
 </div>
